Ported to version 1.20.1 Fixed a bug where sprites weren't removed when closing the inventory and would appear in other containers Changed some methods for compatibility with earlier versions of Java